--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -3,14 +3,14 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.springframework</groupId>
-    <artifactId>gs-batch-processing</artifactId>
+    <groupId>info.smartkit.hairy-batman</groupId>
+    <artifactId>wx-batch-processing</artifactId>
     <version>0.1.0</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.1.10.RELEASE</version>
+        <version>1.2.1.RELEASE</version>
     </parent>
     
     <dependencies>
