--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -42,6 +42,12 @@
 			<artifactId>opencsv</artifactId>
 			<version>2.3</version>
 		</dependency>
+		<!-- HtmlParser -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.1</version>
+		</dependency>
 	</dependencies>
 
 
