--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -12,6 +12,13 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.2.1.RELEASE</version>
 	</parent>
+	
+	<properties>
+<!-- 		<tomcat.version>7.0.56</tomcat.version> -->
+		<start-class>info.smartkit.hairy_batman.Application</start-class>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+<!-- 		<java.version>1.8</java.version> -->
+	</properties>
 
 	<dependencies>
 		<dependency>
