--- a/complete/src/main/resources/application.properties
+++ b/complete/src/main/resources/application.properties
@@ -6,3 +6,7 @@ database.driver=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/hairy_batman_dev
 database.username=root
 database.password=
+
+#Batch jobs
+spring.batch.job.enabled=true
+#spring.batch.job.names=csvImportWxFooJob;
