--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -38,6 +38,10 @@
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-infrastructure</artifactId>
+		</dependency>
 		<!-- RestTemplate/Json -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -97,6 +101,23 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<!-- POI -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.10-FINAL</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.10-FINAL</version>
+		</dependency>
+		<!-- Excel-ObjectMapper -->
+		<dependency>
+			<groupId>com.blogspot.na5cent</groupId>
+			<artifactId>excel-object-mapping</artifactId>
+			<version>1.0-SNAPSHORT</version>
 		</dependency>
 	</dependencies>
 
