--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -117,7 +117,11 @@
 		<dependency>
 			<groupId>com.blogspot.na5cent</groupId>
 			<artifactId>excel-object-mapping</artifactId>
-			<version>1.0-SNAPSHORT</version>
+			<version>1.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j</artifactId>
 		</dependency>
 	</dependencies>
 
