--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -123,6 +123,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j</artifactId>
 		</dependency>
+		<!-- Spring-batch-excel-extension -->
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-excel</artifactId>
+			<version>0.5.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
