--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -20,6 +20,7 @@
 		<!-- <java.version>1.8</java.version> -->
 	</properties>
 	<dependencies>
+		<!-- Spring-boot-batch -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-batch</artifactId>
@@ -33,10 +34,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j2</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
@@ -97,11 +94,6 @@
 			<groupId>jaxen</groupId>
 			<artifactId>jaxen</artifactId>
 		</dependency>
-		<!-- MySQL -->
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-		</dependency>
 		<!-- POI -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
@@ -128,6 +120,15 @@
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-excel</artifactId>
 			<version>0.5.0-SNAPSHOT</version>
+		</dependency>
+		<!-- MySQL/JPA -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 	</dependencies>
 
