--- a/complete/src/main/resources/application.properties
+++ b/complete/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 #override the spring parameter 'create-drop', 'create' creates the schema deleting the previous data
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.platform=mysql
 # no sql in the log
 spring.jpa.show-sql=false
 database.driver=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/hairy_batman_dev?useUnicode=true&characterEncoding=UTF-8
+database.url=jdbc:mysql://localhost:4306/hairy_batman_dev?useUnicode=true&characterEncoding=UTF-8
 database.username=root
-database.password=
+database.password=root
 
 #Batch jobs
 spring.batch.job.enabled=true
