ADDED:WxSubscriber simple add API support with SwaggerUI/JPARest

--- a/complete/src/main/resources/application.properties
+++ b/complete/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #override the spring parameter 'create-drop', 'create' creates the schema deleting the previous data
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.platform=mysql
 # no sql in the log
 spring.jpa.show-sql=true
@@ -13,3 +13,5 @@ spring.datasource.initialize=false
 #Batch jobs
 #spring.batch.job.enabled=true
 #spring.batch.job.names=csvImportWxFooJob;
+server.contextPath=/api
+server.port=8053
