--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -4,7 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>info.smartkit.hairy-batman</groupId>
-	<artifactId>wx-batch-processing</artifactId>
+<!-- 	<artifactId>wx-batch-processing</artifactId> -->
+	<artifactId>hairy-batman-kit</artifactId>
 	<version>0.1.0</version>
 
 	<parent>
