--- a/complete/src/main/resources/application-test.properties
+++ b/complete/src/main/resources/application-test.properties
@@ -4,9 +4,9 @@ spring.datasource.platform=mysql
 # no sql in the log
 spring.jpa.show-sql=true
 database.driver=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/hairy_batman_dev?useUnicode=true&characterEncoding=UTF-8
+database.url=jdbc:mysql://123.57.78.65:3306/hairy_batman_test?useUnicode=true&characterEncoding=UTF-8
 database.username=root
-database.password=
+database.password=Kit7740321
 #
 spring.datasource.initialize=false
 
